# iterative_ai_test

./: .gitignore  1.preprocessing.py  2.data_split.py  3.train.py  README.md  dvc.yaml  param.py  params.py  pyproject.toml  test.ipynb  test.py
.dvc/: config
data/sentiment_preprocessed/: .gitignore
data/sentiment_tagged_data/: .gitignore  5-1.세제세정탈취제(165).json.dvc  5-1.세제세정탈취제(167).json.dvc  5-1.세제세정탈취제(168).json.dvc  5-1.세제세정탈취제(169).json.dvc  5-1.세제세정탈취제(171).json.dvc  5-1.세제세정탈취제(172).json.dvc  5-2.주방용품(82).json.dvc  5-2.주방용품(84).json.dvc  5-2.주방용품(86).json.dvc  5-2.주방용품(87).json.dvc  5-2.주방용품(88).json.dvc  5-2.주방용품(89).json.dvc  5-2.주방용품(90).json.dvc  5-2.주방용품(91).json.dvc  5-2.주방용품(92).json.dvc  5-2.주방용품(93).json.dvc  5-3.위생용품(158).json.dvc  5-3.위생용품(163).json.dvc  5-3.위생용품(164).json.dvc  5-3.위생용품(165).json.dvc  5-3.위생용품(167).json.dvc  5-3.위생용품(168).json.dvc  5-4.청소세탁용품(57).json.dvc  5-4.청소세탁용품(58).json.dvc  5-4.청소세탁용품(59).json.dvc  5-4.청소세탁용품(64).json.dvc  5-4.청소세탁용품(65).json.dvc  5-4.청소세탁용품(66).json.dvc
data/sentiment_train_data/: .gitignore
data/tagged_data/: 5-1.세제세정탈취제(164).json.dvc  5-1.세제세정탈취제(166).json.dvc  5-1.세제세정탈취제(170).json.dvc  5-1.세제세정탈취제(173).json.dvc  5-2.주방용품(83).json.dvc  5-2.주방용품(85).json.dvc  5-3.위생용품(152).json.dvc  5-3.위생용품(153).json.dvc  5-3.위생용품(154).json.dvc  5-3.위생용품(155).json.dvc  5-3.위생용품(156).json.dvc  5-3.위생용품(157).json.dvc  5-3.위생용품(159).json.dvc  5-3.위생용품(160).json.dvc  5-3.위생용품(161).json.dvc  5-3.위생용품(162).json.dvc  5-3.위생용품(166).json.dvc  5-3.위생용품(169).json.dvc  (+6 more)
dvclive/: metrics.json  params.yaml  report.html
(+7 files in other folders)
