[tool.poetry]
name = "iterative-ai-test"
version = "0.1.0"
description = ""
authors = ["강재호 <greennuri@gmail.com>"]
readme = "README.md"
packages = [{include = "iterative_ai_test"}]

[tool.poetry.dependencies]
python = "^3.11"
dvc = {extras = ["ssh"], version = "^3.19.0"}
pandas = "^2.1.0"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
