[tool.poetry]
name = "iterative-ai-test"
version = "0.1.0"
description = ""
authors = ["강재호 <greennuri@gmail.com>"]
readme = "README.md"
packages = [{include = "iterative_ai_test"}]

[tool.poetry.dependencies]
python = "^3.11"
dvc = {extras = ["ssh"], version = "^3.19.0"}
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
datasets = "^2.14.5"
transformers = {extras = ["torch"], version = "^4.33.2"}
peft = "^0.5.0"
torch = ">=2.0.0, !=2.0.1"
huggingface-hub = "^0.17.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.4.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
